--- a/index.html
+++ b/index.html
@@ -488,9 +488,7 @@ body{
 <body>
 <header>
 <div class="nav">
-<div class="title">
-<a href="index.html">Le Testament d’Azénor</a>
-</div>
+<div class="title"></div>
 <nav aria-label="Navigation" class="menu">
 <a href="lieux-du-roman.html">Lieux</a>
 <a href="personnages.html">Personnages</a>
