--- a/en/index.html
+++ b/en/index.html
@@ -240,6 +240,61 @@ html, body{
 }
 
 </style>
+<style>
+
+/* === FIX iPhone: header + footer vraiment fixes, sans bloquer le scroll === */
+/* Override en !important car style.css peut imposer overflow/positions */
+:root{
+  --header-h: 90px;
+  --footer-h: 110px;
+}
+@media (max-width: 768px){
+  :root{
+    --header-h: 100px;
+    --footer-h: 130px;
+  }
+}
+
+/* Garantir un scroll vertical normal sur iOS */
+html, body{
+  height: auto !important;
+  overflow-x: hidden !important;
+  overflow-y: auto !important;
+  -webkit-overflow-scrolling: touch;
+}
+
+/* Header fixé */
+header.site-header{
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  width: 100% !important;
+  z-index: 9999 !important;
+}
+
+/* Footer fixé */
+footer.site-footer{
+  position: fixed !important;
+  left: 0 !important;
+  right: 0 !important;
+  bottom: 0 !important;
+  width: 100% !important;
+  z-index: 9998 !important;
+}
+
+/* Réserver l'espace du header et du footer pour que le contenu ne soit pas coupé */
+body{
+  padding-top: var(--header-h) !important;
+  padding-bottom: var(--footer-h) !important;
+}
+
+/* La section hero n'a plus besoin d'un padding-top spécifique */
+.hero{
+  padding-top: 0 !important;
+}
+
+</style>
 </head>
 <body>
 <!-- INTRO THÉÂTRALE -->
