--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,14 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
   <meta name="description" content="Page de contact du Testament d’Azénor (auteur / droits).">
-  <link rel="canonical" href="https://alain7544.neocities.org/contact.html">
-  <link rel="alternate" hreflang="fr" href="https://alain7544.neocities.org/contact.html">
-  <link rel="alternate" hreflang="en" href="https://alain7544.neocities.org/en/contact.html">
+  <link rel="canonical" href="https://azenor.org/contact.html">
+  <link rel="alternate" hreflang="fr" href="https://azenor.org/contact.html">
+  <link rel="alternate" hreflang="en" href="https://azenor.org/en/contact.html">
   <meta property="og:locale" content="fr_FR">
   <meta property="og:type" content="article">
   <meta property="og:title" content="Contact — Le Testament d’Azénor">
   <meta property="og:description" content="Page de contact du Testament d’Azénor (auteur / droits).">
-  <meta property="og:url" content="https://alain7544.neocities.org/contact.html">
+  <meta property="og:url" content="https://azenor.org/contact.html">
   <meta property="og:site_name" content="Le Testament d’Azénor">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Contact — Le Testament d’Azénor">
@@ -455,7 +455,7 @@ main{
 <input autocomplete="off" name="website" style="position:absolute; left:-10000px; top:auto; width:1px; height:1px; overflow:hidden;" tabindex="-1" type="text"/>
 <!-- Formspree options -->
 <input type="hidden" name="_subject" value="Message depuis le site Le Testament d’Azénor"/>
-<input type="hidden" name="_next" value="merci.html"/>
+
 <div class="row">
 <div class="field">
 <label for="name">Nom</label>
