--- a/index.html
+++ b/index.html
@@ -8,21 +8,33 @@
 <link rel="manifest" href="/site.webmanifest">
 <meta charset="utf-8"/>
 <title>Le Testament d’Azénor | Site officiel</title>
-<meta content="width=device-width, initial-scale=1" name="viewport"/>
-<meta content="Site officiel du roman Le Testament d’Azénor : univers, personnages, lieux, making-of et informations de publication." name="description"/>
-<link href="https://alain7544.neocities.org/" rel="canonical"/>
-<link href="https://alain7544.neocities.org/" hreflang="fr" rel="alternate"/>
-<link href="https://alain7544.neocities.org/en/" hreflang="en" rel="alternate"/>
-<link href="https://alain7544.neocities.org/" hreflang="x-default" rel="alternate"/>
-<meta content="fr_FR" property="og:locale"/>
-<meta content="website" property="og:type"/>
-<meta content="Le Testament d’Azénor | Site officiel" property="og:title"/>
-<meta content="Site officiel du roman Le Testament d’Azénor : univers, personnages, lieux, making-of et informations de publication." property="og:description"/>
-<meta content="https://alain7544.neocities.org/" property="og:url"/>
-<meta content="Le Testament d’Azénor" property="og:site_name"/>
-<meta content="summary" name="twitter:card"/>
-<meta content="Le Testament d’Azénor | Site officiel" name="twitter:title"/>
-<meta content="Site officiel du roman Le Testament d’Azénor : univers, personnages, lieux, making-of et informations de publication." name="twitter:description"/>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<meta name="description"
+      content="Site officiel du roman Le Testament d’Azénor : univers, personnages, lieux, making-of et informations de publication.">
+
+<!-- URL CANONIQUE (page FR) -->
+<link rel="canonical" href="https://azenor.org/">
+
+<!-- HREFLANG -->
+<link rel="alternate" hreflang="fr" href="https://azenor.org/">
+<link rel="alternate" hreflang="en" href="https://azenor.org/en/">
+<link rel="alternate" hreflang="x-default" href="https://azenor.org/">
+
+<!-- OPEN GRAPH (WhatsApp / Facebook) -->
+<meta property="og:locale" content="fr_FR">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Le Testament d’Azénor | Site officiel">
+<meta property="og:description"
+      content="Site officiel du roman Le Testament d’Azénor : univers, personnages, lieux, making-of et informations de publication.">
+<meta property="og:url" content="https://azenor.org/">
+<meta property="og:site_name" content="Le Testament d’Azénor">
+
+<!-- TWITTER / X -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Le Testament d’Azénor | Site officiel">
+<meta name="twitter:description"
+      content="Site officiel du roman Le Testament d’Azénor : univers, personnages, lieux, making-of et informations de publication.">
 <style>
     :root{
       --accent:#f28c28;
