--- a/en/index.html
+++ b/en/index.html
@@ -9,15 +9,16 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
   <meta name="description" content="Official website for the novel Le Testament d’Azénor: world, characters, places, making-of, and publication info.">
-  <link rel="canonical" href="https://alain7544.neocities.org/en/">
-  <link rel="alternate" hreflang="fr" href="https://alain7544.neocities.org/">
-  <link rel="alternate" hreflang="en" href="https://alain7544.neocities.org/en/">
-  <link rel="alternate" hreflang="x-default" href="https://alain7544.neocities.org/">
-  <meta property="og:locale" content="en_US">
+  <link rel="canonical" href="https://azenor.org/en/">
+<link rel="alternate" hreflang="fr" href="https://azenor.org/">
+<link rel="alternate" hreflang="en" href="https://azenor.org/en/">
+<link rel="alternate" hreflang="x-default" href="https://azenor.org/">
+<meta property="og:url" content="https://azenor.org/en/">
+<meta property="og:locale" content="en_GB">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Le Testament d’Azénor | Official site">
   <meta property="og:description" content="Official website for the novel Le Testament d’Azénor: world, characters, places, making-of, and publication info.">
-  <meta property="og:url" content="https://alain7544.neocities.org/en/">
+ <meta property="og:url" content="https://azenor.org/en/">
   <meta property="og:site_name" content="Le Testament d’Azénor">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Le Testament d’Azénor | Official site">
