--- a/umbertus.html
+++ b/umbertus.html
@@ -273,6 +273,22 @@ main{
   margin-top: 0 !important;
 }
 </style>
+  <style>
+a.lien-discret-orange {
+  text-decoration: none;
+  color: #f28c28;
+  cursor: pointer;
+}
+
+a.lien-discret-orange:hover {
+  opacity: 0.85;
+}
+
+a.lien-discret-orange:focus {
+  outline: none;
+  text-decoration: underline;
+}
+</style>
 </meta></meta></head>
 <body class="personnage">
 <header class="site-header">
@@ -301,8 +317,11 @@ main{
 <p>C’était un missionnaire Romain, du nom d’Umbertus, qui avait accompagné Germain d’Auxerre dans son deuxième voyage en Bretagne Insulaire, avec ses compagnons Sévère et Hilaire. Originaire d’Alexandria, il avait fait ses études à Taurasia.</p>
 <p>L’abbé Umbertus était un homme imposant non par la force de son corps, mais par la profondeur de son esprit. Il portait toujours une robe monastique usée, tachée d’encre et marquée par des années à feuilleter des parchemins. Il incarnait le stéréotype du moine romain érudit, plus préoccupé par la logique et la doctrine que par les mystères du monde. Sa barbe abondante et soigneusement coiffée oscillait entre le gris et le noir, reflétant les marques du temps. Il avait une apparence sereine, inspirant le respect, voire la crainte. Ses mains trahissaient un homme plus habitué à la lecture des manuscrits qu’aux travaux manuels.</p>
 <p>Dès son arrivée, il se démarqua des autres moines, car il portait la tonsure romaine. Son front large, dégarni, semblait taillé pour la réflexion, tandis que ses sourcils épais lui donnaient un regard perçant. Derrière ses yeux vifs et scrutateurs se cachait une curiosité insatiable, capable de sonder aussi bien les livres que les âmes. Son nez aquilin, finement ciselé, ajoutait à son allure de penseur, alors que ses lèvres délicates murmuraient souvent des mots latins, comme s’il conversait avec les anciens auteurs qu’il étudiait sans relâche pour lutter contre les hérésies, tels que Augustin d’Hippone, Grégoire le Grand, Ambroise de Milan ou Jérôme de Stridon.</p>
-<p class="umbertus-cta" style="margin-top:2rem; font-style:normal; text-transform:uppercase; letter-spacing:0.02em;">MAIS À QUI RESSEMBLE L’HORRIBLE <a href="umberto.html" style="font-style:normal; font-weight:700; text-decoration:underline;">UMBERTUS</a> ?</p>
-</div>
+<p style="margin-top:2rem;">
+  <a href="umberto.html" class="lien-discret-orange">
+    un visage étrangement familier, pour qui sait regarder de près.
+  </a>
+</p>
 </section>
 </main>
 <footer class="site-footer">
