--- a/umbertus.html
+++ b/umbertus.html
@@ -302,6 +302,13 @@ p.sans-guillemets a::after {
   display: none !important;
 }
 }
+  /* Désactive les guillemets décoratifs du bloc excerpt
+   quand il contient un élément sans-guillemets */
+.excerpt:has(.sans-guillemets)::before,
+.excerpt:has(.sans-guillemets)::after {
+  content: none !important;
+  display: none !important;
+}
 </meta></meta></head>
 <body class="personnage">
 <header class="site-header">
