--- a/contact.html
+++ b/contact.html
@@ -441,11 +441,11 @@ main{
     Passionné par l’histoire de la Bretagne et la civilisation celtique, il se consacre aujourd’hui à l’écriture.
     Pour ce premier roman, il explore leurs dimensions symboliques et universelles,
     les origines du christianisme celtique ainsi que les figures fondatrices de Bretagne et d’Irlande.
-    Il réside actuellement à Moëlan-sur-Mer, en Finistère.
+    Il réside actuellement en Finistère.
   </p>
 </section>
 <p>
-    Ce site accompagne la parution du livre <em>retour</em>.
+    Ce site accompagne la parution du livre <em>Le Testament d'Azénor</em>.
     Vous pouvez utiliser ce formulaire pour poser une question sur le roman,
     ses sources, proposer un échange, ou partager votre lecture.
   </p>
