--- a/contact.html
+++ b/contact.html
@@ -445,7 +445,7 @@ main{
   </p>
 </section>
 <p>
-    Ce site accompagne la parution du livre <em>Le Testament d'Azénor</em>.
+    Ce site accompagne la parution du livre Le Testament d'Azénor.
     Vous pouvez utiliser ce formulaire pour poser une question sur le roman,
     ses sources, proposer un échange, ou partager votre lecture.
   </p>
