--- a/contact.html
+++ b/contact.html
@@ -446,7 +446,7 @@ main{
 </section>
 <p>
     Ce site accompagne la parution du livre Le Testament d'Azénor.
-    Vous pouvez utiliser ce formulaire pour poser une question sur le roman,
+    (Editions l'Harmattan, 2026). Vous pouvez utiliser ce formulaire pour poser une question sur le roman,
     ses sources, proposer un échange, ou partager votre lecture.
   </p>
 <section aria-label="Formulaire de contact" class="contact-form">
