--- a/contact.html
+++ b/contact.html
@@ -445,7 +445,7 @@ main{
   </p>
 </section>
 <p>
-    Ce site accompagne la parution du livre Le Testament d'Azénor.
+    Ce site accompagne la parution du livre "Le Testament d'Azénor".
     (Editions l'Harmattan, 2026). Vous pouvez utiliser ce formulaire pour poser une question sur le roman,
     ses sources, proposer un échange, ou partager votre lecture.
   </p>
