--- a/umbertus.html
+++ b/umbertus.html
@@ -337,7 +337,7 @@ a.lien-discret-orange:focus{
 <p>Dès son arrivée, il se démarqua des autres moines, car il portait la tonsure romaine. Son front large, dégarni, semblait taillé pour la réflexion, tandis que ses sourcils épais lui donnaient un regard perçant. Derrière ses yeux vifs et scrutateurs se cachait une curiosité insatiable, capable de sonder aussi bien les livres que les âmes. Son nez aquilin, finement ciselé, ajoutait à son allure de penseur, alors que ses lèvres délicates murmuraient souvent des mots latins, comme s’il conversait avec les anciens auteurs qu’il étudiait sans relâche pour lutter contre les hérésies, tels que Augustin d’Hippone, Grégoire le Grand, Ambroise de Milan ou Jérôme de Stridon.</p>
 </div>
 <p class="umbertus-cta2">
-  <a href="umberto.html" class="lien-discret-orange">un visage étrangement familier, pour qui sait regarder de près.</a>
+  <a href="umberto.html" class="lien-discret-orange">Un visage étrangement familier, pour qui sait regarder de près.</a>
 </p>
 </section>
 </main>
