--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ body{
 <a href="livre-des-conquetes.html">Conquêtes</a>
 <a href="veritable-legende-azenor.html">La légende</a>
 <a href="bibliographie.html">Bibliographie</a>
-<a href="making-off.html">Making off</a>
+<a href="making-off.html">making of</a>
 <a href="contact.html">Contact</a>
 </nav>
 <div aria-label="Choix de la langue" class="lang">
