--- a/en/index.html
+++ b/en/index.html
@@ -302,7 +302,7 @@ body{
 <!-- CONTENU DE L’INDEX -->
 <header class="site-header">
 <nav class="nav"><div aria-label="Language switch" class="nav-lang"><a href="../index.html" title="Version française" lang="fr" hreflang="fr">🇫🇷</a><span> | </span><a href="index.html" title="English version">🇬🇧</a></div>
-<div class="nav-menu"><a href="index.html">home</a><a href="personnages.html">characters</a><a href="making-off.html">making off</a><a href="rights.html">rights &amp; translation</a><a href="contact.html">contact</a></div>
+<div class="nav-menu"><a href="index.html">home</a><a href="personnages.html">characters</a><a href="making-off.html">making of</a><a href="rights.html">rights &amp; translation</a><a href="contact.html">contact</a></div>
 </nav>
 </header>
 <section class="hero">
