--- a/en/rights.html
+++ b/en/rights.html
@@ -61,7 +61,7 @@ h1 {
   font-style: italic;
 }
 
-/* Harmonisation Making off / Rights */
+/* Harmonisation making of / Rights */
 h2 { color: #f28c28; font-family: 'Libre Baskerville', serif; margin-top: 2.2rem; }
 p { line-height: 1.85; color: #f2f2f2; }
 a { color: #f28c28; }
@@ -73,7 +73,7 @@ a:hover { opacity: 0.9; }
 <div class="nav-title"><a href="../index.html">back</a></div>
 <div aria-label="Language switch" class="nav-lang"><a href="../index.html" title="Version française" lang="fr" hreflang="fr">🇫🇷</a><span> | </span><a href="index.html" title="English version">🇬🇧</a></div>
 <div class="nav-menu">
-<a href="index.html">home</a><a href="personnages.html">characters</a><a href="making-off.html">making off</a><a href="rights.html">rights &amp; translation</a><a href="contact.html">contact</a>
+<a href="index.html">home</a><a href="personnages.html">characters</a><a href="making-off.html">making of</a><a href="rights.html">rights &amp; translation</a><a href="contact.html">contact</a>
 </div>
 </nav>
 </header>
