--- a/bibliographie.html
+++ b/bibliographie.html
@@ -296,7 +296,7 @@ main{
 <a href="livre-des-conquetes.html">livre des<span>conquêtes</span></a>
 <a href="veritable-legende-azenor.html">la légende<span>d’azénor</span></a>
 <a href="bibliographie.html">bibliographie</a>
-<a href="making-off.html">making off</a>
+<a href="making-off.html">making of</a>
 <a href="contact.html">contact</a>
 </div>
 </nav>
