--- a/making-off.html
+++ b/making-off.html
@@ -10,14 +10,14 @@
   <link rel="alternate" hreflang="en" href="https://alain7544.neocities.org/en/making-off.html">
   <meta property="og:locale" content="fr_FR">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Making off — Le Testament d’Azénor">
+  <meta property="og:title" content="making of — Le Testament d’Azénor">
   <meta property="og:description" content="Making-of du roman Le Testament d’Azénor : genèse, documentation, écriture et visuels.">
   <meta property="og:url" content="https://alain7544.neocities.org/making-off.html">
   <meta property="og:site_name" content="Le Testament d’Azénor">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Making off — Le Testament d’Azénor">
+  <meta name="twitter:title" content="making of — Le Testament d’Azénor">
   <meta name="twitter:description" content="Making-of du roman Le Testament d’Azénor : genèse, documentation, écriture et visuels.">
-<title>Making off — Le Testament d’Azénor</title>
+<title>making of — Le Testament d’Azénor</title>
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400&700&amp&family=Inter:wght@300&400&500&amp&display=swap" rel="stylesheet"/>
@@ -306,13 +306,13 @@ main{
 <a href="livre-des-conquetes.html">livre des<span>conquêtes</span></a>
 <a href="veritable-legende-azenor.html">la légende<span>d’azénor</span></a>
 <a href="bibliographie.html">bibliographie</a>
-<a href="making-off.html">making off</a>
+<a href="making-off.html">making of</a>
 <a href="contact.html">contact</a>
 </div>
 </nav>
 </header>
 <main>
-<h1 class="titre-principal">Making off</h1>
+<h1 class="titre-principal">making of</h1>
 <h2>Un roman historique, avant tout</h2>
 <p><em>retour</em> n’a d’autre ambition que celle d’un roman historique. Il ne prétend ni reconstituer exhaustivement une époque, ni trancher des débats historiographiques encore ouverts. Il s’appuie cependant, avec la plus grande fidélité possible, sur un ensemble de sources qui ont nourri l’écriture et orienté le récit.</p>
 <h2>Une période mal connue</h2>
