--- a/en/umbertus.html
+++ b/en/umbertus.html
@@ -285,7 +285,7 @@ main{
 <div class="nav-title">
 <a href="../index.html">back</a>
 </div><div aria-label="Language switch" class="nav-lang"><a href="../index.html" title="Version française" lang="fr" hreflang="fr">🇫🇷</a><span> | </span><a href="index.html" title="English version">🇬🇧</a></div>
-<div class="nav-menu"><a href="index.html">home</a><a href="personnages.html">characters</a><a href="making-off.html">making off</a><a href="rights.html">rights &amp; translation</a><a href="contact.html">contact</a></div>
+<div class="nav-menu"><a href="index.html">home</a><a href="personnages.html">characters</a><a href="making-off.html">making of</a><a href="rights.html">rights &amp; translation</a><a href="contact.html">contact</a></div>
 </nav>
 </header>
 <main>
