--- a/achat.html
+++ b/achat.html
@@ -1,103 +1,153 @@
 <!DOCTYPE html>
-
 <html lang="fr">
 <head>
 <meta charset="utf-8"/>
 <title>Acheter le livre – Le Testament d’Azénor</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
-  <meta name="description" content="Acheter le livre – Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
-  <link rel="canonical" href="https://alain7544.neocities.org/achat.html">
-  <meta property="og:locale" content="fr_FR">
-  <meta property="og:type" content="article">
-  <meta property="og:title" content="Acheter le livre – Le Testament d’Azénor">
-  <meta property="og:description" content="Acheter le livre – Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
-  <meta property="og:url" content="https://alain7544.neocities.org/achat.html">
-  <meta property="og:site_name" content="Le Testament d’Azénor">
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Acheter le livre – Le Testament d’Azénor">
-  <meta name="twitter:description" content="Acheter le livre – Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
+<meta name="description" content="Acheter le livre – Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
+<link rel="canonical" href="https://alain7544.neocities.org/achat.html">
+
+<meta property="og:locale" content="fr_FR">
+<meta property="og:type" content="article">
+<meta property="og:title" content="Acheter le livre – Le Testament d’Azénor">
+<meta property="og:description" content="Acheter le livre – Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
+<meta property="og:url" content="https://alain7544.neocities.org/achat.html">
+<meta property="og:site_name" content="Le Testament d’Azénor">
+
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400&700&amp&family=Inter:wght@300&400&500&amp&display=swap" rel="stylesheet"/>
+<link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet"/>
 <link href="css/style.css?v=20260115" rel="stylesheet"/>
+
 <style>
-    main{
-      max-width: 900px;
-      margin: 4rem auto;
-      padding: 0 1.5rem;
-      text-align: center;
-    }
+main{
+  max-width: 900px;
+  margin: 4rem auto;
+  padding: 0 1.5rem;
+  text-align: center;
+}
 
-    h1{
-      color: #f28c28;
-      font-family: 'Libre Baskerville', serif;
-      margin-bottom: 2rem;
-    }
+h1{
+  color: #f28c28;
+  font-family: 'Libre Baskerville', serif;
+  margin-bottom: 2rem;
+}
 
-    .coming-soon{
-      font-style: italic;
-      opacity: 0.9;
-      margin-bottom: 2.5rem;
-    }
+.coming-soon{
+  font-style: italic;
+  opacity: 0.9;
+  margin-bottom: 2.5rem;
+}
 
-    .buy-box{
-      border: 1px solid rgba(255,255,255,0.2);
-      padding: 2rem;
-      margin-top: 2rem;
-    }
+.buy-box{
+  border: 1px solid rgba(255,255,255,0.2);
+  padding: 2.5rem 2rem;
+  margin-top: 2rem;
+}
 
-    .buy-box p{
-      margin-bottom: 1.2rem;
-    }
+.buy-box p{
+  margin-bottom: 1.2rem;
+}
 
-    .disabled-link{
-      display: inline-block;
-      margin: 0.5rem 1rem;
-      padding: 0.6rem 1.2rem;
-      border: 1px solid #f28c28;
-      color: #f28c28;
-      text-decoration: none;
-      cursor: not-allowed;
-      opacity: 0.6;
-    }
-  </style>
+/* Bloc éditeur */
+.publisher{
+  margin: 2rem 0 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.8rem;
+}
+
+.publisher-logo{
+  background:#0a7a3d; /* vert Harmattan */
+  padding: 1rem 1.4rem;
+}
+
+.publisher-logo img{
+  max-width: 220px;
+  height: auto;
+  display: block;
+}
+
+.publisher-name{
+  font-family: 'Inter', sans-serif;
+  font-size: 0.95rem;
+  opacity: 0.85;
+}
+
+/* Bouton achat */
+.buy-link{
+  display: inline-block;
+  margin-top: 1.2rem;
+  padding: 0.9rem 1.8rem;
+  border: 1px solid #f28c28;
+  color: #f28c28;
+  background: transparent;
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  text-decoration: none;
+  transition: all 0.25s ease;
+}
+
+.buy-link:hover{
+  background: #f28c28;
+  color: #000;
+}
+</style>
 </head>
+
 <body>
 <header class="site-header">
 <nav class="nav">
-<div class="nav-title">
-<a href="index.html">retour</a>
-</div>
-<div class="nav-menu">
-<a href="lieux-du-roman.html">les lieux<span>du roman</span></a>
-<a href="personnages.html">les<span>personnages</span></a>
-<a href="livre-des-conquetes.html">livre des<span>conquêtes</span></a>
-<a href="veritable-legende-azenor.html">la légende<span>d’azénor</span></a>
-<a href="bibliographie.html">bibliographie</a>
-<a href="making-off.html">making of</a>
-<a href="contact.html">contact</a>
-</div>
+  <div class="nav-title">
+    <a href="index.html">retour</a>
+  </div>
+  <div class="nav-menu">
+    <a href="lieux-du-roman.html">les lieux<span>du roman</span></a>
+    <a href="personnages.html">les<span>personnages</span></a>
+    <a href="livre-des-conquetes.html">livre des<span>conquêtes</span></a>
+    <a href="veritable-legende-azenor.html">la légende<span>d’azénor</span></a>
+    <a href="bibliographie.html">bibliographie</a>
+    <a href="making-off.html">making of</a>
+    <a href="contact.html">contact</a>
+  </div>
 </nav>
 </header>
+
 <main>
 <h1>Acheter le livre</h1>
-<p class="coming-soon">
-<em>retour</em> sera prochainement disponible.
-  </p>
-<p>
-    Cette page est en place pour préparer la sortie du roman.
-    Dès sa publication, vous trouverez ici les liens vers :
-  </p>
+
 <div class="buy-box">
-<p>• le site de l’éditeur</p>
-<p>• les librairies en ligne</p>
-<p>• les points de vente partenaires</p>
-<div>
-<span class="disabled-link">Site de l’éditeur</span>
-<span class="disabled-link">Librairies en ligne</span>
-</div>
+  <p>
+    Le roman est publié par <strong>L’Harmattan</strong> et peut être commandé
+    directement sur le site officiel de l’éditeur.
+  </p>
+
+  <div class="publisher">
+    <div class="publisher-logo">
+      <img src="images/accueil/Logo-harmattan.png"
+           alt="Logo des Éditions L’Harmattan"
+           onerror="if(!this.dataset.try){this.dataset.try=1;this.src='/images/accueil/Logo-harmattan.png';return;}if(this.dataset.try==1){this.dataset.try=2;this.src='images/accueil/Logo-harmattan.jpg';return;}if(this.dataset.try==2){this.dataset.try=3;this.src='/images/accueil/Logo-harmattan.jpg';return;}">
+    </div>
+    <div class="publisher-name">Éditions L’Harmattan</div>
+  </div>
+
+  <a href="https://www.editions-harmattan.fr/catalogue/livre/le-testament-dazenor/81789"
+     target="_blank"
+     rel="noopener"
+     class="buy-link">
+     Acheter chez l’éditeur
+  </a>
+
+  <div style="margin-top:3rem;"></div>
+
+  <p style="font-size:0.95rem; opacity:0.85;">
+    D’autres points de vente (librairies indépendantes et plateformes en ligne)
+    pourront être ajoutés ultérieurement.
+  </p>
 </div>
 </main>
+
 </body>
 </html>
