--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <html lang="fr">
 <head>
   <link rel="icon" href="/favicon.ico">
+<head>
+  <meta charset="utf-8">
+  <title>Le Testament d’Azénor</title>
 
+  <meta property="og:title" content="Le Testament d’Azénor">
+  <meta property="og:description" content="Site officiel — univers, personnages et ressources">
+  <meta property="og:image" content="https://azenor.org/images/accueil/copiste.png">
+  <meta property="og:url" content="https://azenor.org/">
+  <meta property="og:type" content="website">
+
+  <!-- le reste de ton head -->
+</head>
 
 
 
