--- a/index.html
+++ b/index.html
@@ -12,7 +12,21 @@
   <meta property="og:image" content="https://azenor.org/images/accueil/copiste.png">
   <meta property="og:url" content="https://azenor.org/">
   <meta property="og:type" content="website">
+<head>
+  <meta charset="utf-8">
+  <title>Le Testament d’Azénor</title>
 
+  <!-- Open Graph -->
+  <meta property="og:title" content="Le Testament d’Azénor">
+  <meta property="og:description" content="Site officiel — univers, personnages et ressources">
+  <meta property="og:image" content="https://azenor.org/images/accueil/copiste.png">
+  <meta property="og:image:secure_url" content="https://azenor.org/images/accueil/copiste.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:url" content="https://azenor.org/">
+  <meta property="og:type" content="website">
+
+  <!-- le reste de ton head (CSS, fonts, etc.) -->
+</head>
   <!-- le reste de ton head -->
 </head>
 
