--- a/en/index.html
+++ b/en/index.html
@@ -8,7 +8,14 @@
 <meta http-equiv="Content-Language" content="en"/>
 <title>Le Testament d’Azénor | Official site</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-
+<!-- Open Graph / WhatsApp -->
+<meta property="og:title" content="Le Testament d’Azénor">
+<meta property="og:description" content="Site officiel — univers, personnages et ressources">
+<meta property="og:image" content="https://azenor.org/images/accueil/copiste.png">
+<meta property="og:image:secure_url" content="https://azenor.org/images/accueil/copiste.png">
+<meta property="og:image:type" content="image/png">
+<meta property="og:url" content="https://azenor.org/">
+<meta property="og:type" content="website">
   <meta name="description" content="Official website for the novel Le Testament d’Azénor: world, characters, places, making-of, and publication info.">
   <link rel="canonical" href="https://azenor.org/en/">
 <link rel="alternate" hreflang="fr" href="https://azenor.org/">
