--- a/en/azenor.html
+++ b/en/azenor.html
@@ -8,21 +8,29 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
   <meta name="description" content="Azénor – The Testament of Azénor — official page of The Testament of Azénor: story world, characters and resources.">
-  <link rel="canonical" href="https://alain7544.neocities.org/en/azenor.html">
-  <link rel="alternate" hreflang="fr" href="https://alain7544.neocities.org/azenor.html">
-  <link rel="alternate" hreflang="en" href="https://alain7544.neocities.org/en/azenor.html">
-  <meta property="og:locale" content="en_US">
-  <meta property="og:type" content="article">
-  <meta property="og:title" content="Azénor – The Testament of Azénor">
-  <meta property="og:description" content="Azénor – The Testament of Azénor — official page of The Testament of Azénor: story world, characters and resources.">
-  <meta property="og:url" content="https://alain7544.neocities.org/en/azenor.html">
-  <meta property="og:site_name" content="Le Testament d’Azénor">
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Azénor – The Testament of Azénor">
-  <meta name="twitter:description" content="Azénor – The Testament of Azénor — official page of The Testament of Azénor: story world, characters and resources.">
-<title>Azénor – The Testament of Azénor</title>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<!-- SEO & Open Graph – EN -->
+<link rel="canonical" href="https://azenor.org/en/">
+<link rel="alternate" hreflang="fr" href="https://azenor.org/">
+<link rel="alternate" hreflang="en" href="https://azenor.org/en/">
+
+<meta property="og:locale" content="en_US">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Azénor – The Testament of Azénor">
+<meta property="og:description" content="Official site of The Testament of Azénor — story world, characters and resources.">
+<meta property="og:url" content="https://azenor.org/en/">
+<meta property="og:site_name" content="Le Testament d’Azénor">
+
+<meta property="og:image" content="https://azenor.org/images/accueil/copiste.png">
+<meta property="og:image:secure_url" content="https://azenor.org/images/accueil/copiste.png">
+<meta property="og:image:type" content="image/png">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Azénor – The Testament of Azénor">
+<meta name="twitter:description" content="Official site of The Testament of Azénor — story world, characters and resources.">
+<meta name="twitter:image" content="https://azenor.org/images/accueil/copiste.png">
+
+
+
 <title>retour</title>
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
