--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <head>
   <meta charset="utf-8">
   <title>Le Testament d’Azénor</title>
-
+<meta property="og:url" content="https://azenor.org/">
+<meta property="og:locale" content="fr_FR">
   <!-- Open Graph -->
   <meta property="og:title" content="Le Testament d’Azénor">
   <meta property="og:description" content="Site officiel — univers, personnages et ressources">
