--- a/index.html
+++ b/index.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
-
 <html lang="fr">
 <head>
-  <link rel="icon" href="/favicon.ico">
-<head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Le Testament d’Azénor</title>
 
-  <meta property="og:title" content="Le Testament d’Azénor">
-  <meta property="og:description" content="Site officiel — univers, personnages et ressources">
-  <meta property="og:image" content="https://azenor.org/images/accueil/copiste.png">
-  <meta property="og:url" content="https://azenor.org/">
+  <link rel="icon" href="/favicon.ico">
+
+  <!-- Open Graph / WhatsApp – FR -->
+  <meta property="og:locale" content="fr_FR">
   <meta property="og:type" content="website">
-<head>
-  <meta charset="utf-8">
-  <title>Le Testament d’Azénor</title>
-<meta property="og:url" content="https://azenor.org/">
-<meta property="og:locale" content="fr_FR">
-  <!-- Open Graph -->
   <meta property="og:title" content="Le Testament d’Azénor">
   <meta property="og:description" content="Site officiel — univers, personnages et ressources">
+  <meta property="og:url" content="https://azenor.org/">
+  <meta property="og:site_name" content="Le Testament d’Azénor">
+
   <meta property="og:image" content="https://azenor.org/images/accueil/copiste.png">
   <meta property="og:image:secure_url" content="https://azenor.org/images/accueil/copiste.png">
   <meta property="og:image:type" content="image/png">
-  <meta property="og:url" content="https://azenor.org/">
-  <meta property="og:type" content="website">
 
-  <!-- le reste de ton head (CSS, fonts, etc.) -->
-</head>
-  <!-- le reste de ton head -->
-</head>
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Le Testament d’Azénor">
+  <meta name="twitter:description" content="Site officiel — univers, personnages et ressources">
+  <meta name="twitter:image" content="https://azenor.org/images/accueil/copiste.png">
 
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 
 
 
