--- a/achat.html
+++ b/achat.html
@@ -205,7 +205,7 @@ h1{
       <li>
         <a href="https://www.leslibraires.fr/livre/26250550-le-testament-d-azenor-une-epopee-du-vie-siecle-breton-alain-bertrand-l-harmattan"
            target="_blank" rel="noopener">
-          <img src="images/logos/leslibraires.png" alt="Leslibraires.fr">
+          <img src="images/accueil/leslibraires.png" alt="Leslibraires.fr">
           <span>Leslibraires.fr</span>
         </a>
       </li>
@@ -213,7 +213,7 @@ h1{
       <li>
         <a href="https://www.decitre.fr/livres/le-testament-d-azenor-9782336593012.html"
            target="_blank" rel="noopener">
-          <img src="images/logos/decitre.png" alt="Decitre">
+          <img src="images/accueil/decitre.png" alt="Decitre">
           <span>Decitre</span>
         </a>
       </li>
@@ -221,7 +221,7 @@ h1{
       <li>
         <a href="https://www.cultura.com/p-le-testament-d-azenor-une-epopee-du-vie-siecle-breton-9782336593012.html"
            target="_blank" rel="noopener">
-          <img src="images/logos/cultura.png" alt="Cultura">
+          <img src="images/accueil/cultura.png" alt="Cultura">
           <span>Cultura</span>
         </a>
       </li>
@@ -229,7 +229,8 @@ h1{
       <li>
         <a href="https://www.amazon.fr/testament-dAz%C3%A9nor-%C3%A9pop%C3%A9e-si%C3%A8cle-breton/dp/2336593017/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=28S5KE9JMKTB0&dib=eyJ2IjoiMSJ9.wcOud1bhG8QNd3YWVDZmUA.VRmGNyFgGgebmHIQdSI2mUXhozz7CILHbIMWzyvAEQY&dib_tag=se&keywords=LE+TESTAMENT+D%27az%C3%A9nor&qid=1769279881&sprefix=le+testament+d%27az%C3%A9nor%2Caps%2C251&sr=8-1"
            target="_blank" rel="noopener">
-          <img src="images/logos/amazon.png" alt="Amazon">
+          <img src="images/accueil
+          /amazon.png" alt="Amazon">
           <span>Amazon</span>
         </a>
       </li>
