--- a/achat.html
+++ b/achat.html
@@ -3,17 +3,10 @@
 <head>
 <meta charset="utf-8"/>
 <title>Acheter le livre – Le Testament d’Azénor</title>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 <meta name="description" content="Acheter le livre – Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
-<link rel="canonical" href="https://alain7544.neocities.org/achat.html">
-
-<meta property="og:locale" content="fr_FR">
-<meta property="og:type" content="article">
-<meta property="og:title" content="Acheter le livre – Le Testament d’Azénor">
-<meta property="og:description" content="Acheter le livre – Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
-<meta property="og:url" content="https://alain7544.neocities.org/achat.html">
-<meta property="og:site_name" content="Le Testament d’Azénor">
+<link rel="canonical" href="https://alain7544.github.io/azenor/achat.html">
 
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
 <link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
@@ -21,137 +14,27 @@
 <link href="css/style.css?v=20260115" rel="stylesheet"/>
 
 <style>
-main{
-  max-width: 900px;
-  margin: 4rem auto;
-  padding: 0 1.5rem;
-  text-align: center;
-}
+main{max-width:900px;margin:4rem auto;padding:0 1.5rem;text-align:center}
+h1{color:#f28c28;font-family:'Libre Baskerville',serif;margin-bottom:2rem}
+.buy-box{border:1px solid rgba(255,255,255,0.2);padding:2.5rem 2rem;margin-top:2rem}
+.buy-box p{margin-bottom:1.2rem}
+.publisher{margin:2rem 0 1.5rem;display:flex;flex-direction:column;align-items:center;gap:.8rem}
+.publisher-logo{background:#0a7a3d;padding:1rem 1.4rem}
+.publisher-logo img{max-width:220px;height:auto;display:block}
+.publisher-name{font-family:'Inter',sans-serif;font-size:.95rem;opacity:.85}
+.buy-link{display:inline-block;margin-top:1.2rem;padding:.9rem 1.8rem;border:1px solid #f28c28;color:#f28c28;background:transparent;font-family:'Inter',sans-serif;font-weight:500;text-decoration:none;transition:all .25s ease}
+.buy-link:hover{background:#f28c28;color:#000}
 
-h1{
-  color: #f28c28;
-  font-family: 'Libre Baskerville', serif;
-  margin-bottom: 2rem;
-}
-
-.buy-box{
-  border: 1px solid rgba(255,255,255,0.2);
-  padding: 2.5rem 2rem;
-  margin-top: 2rem;
-}
-
-.buy-box p{
-  margin-bottom: 1.2rem;
-}
-
-/* Bloc éditeur */
-.publisher{
-  margin: 2rem 0 1.5rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 0.8rem;
-}
-
-.publisher-logo{
-  background:#0a7a3d; /* vert Harmattan */
-  padding: 1rem 1.4rem;
-}
-
-.publisher-logo img{
-  max-width: 220px;
-  height: auto;
-  display: block;
-}
-
-.publisher-name{
-  font-family: 'Inter', sans-serif;
-  font-size: 0.95rem;
-  opacity: 0.85;
-}
-
-/* Bouton achat */
-.buy-link{
-  display: inline-block;
-  margin-top: 1.2rem;
-  padding: 0.9rem 1.8rem;
-  border: 1px solid #f28c28;
-  color: #f28c28;
-  background: transparent;
-  font-family: 'Inter', sans-serif;
-  font-weight: 500;
-  text-decoration: none;
-  transition: all 0.25s ease;
-}
-
-.buy-link:hover{
-  background: #f28c28;
-  color: #000;
-}
-
-/* Bloc autres points de vente (avec logos) */
-.retailers{
-  margin-top: 2.8rem;
-  max-width: 560px;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: left;
-  font-family: 'Inter', sans-serif;
-  font-size: 0.98rem;
-  opacity: 0.92;
-}
-
-.retailers h2{
-  font-family: 'Libre Baskerville', serif;
-  font-size: 1.1rem;
-  color: #fff;
-  margin: 0 0 1rem 0;
-  text-align: center;
-}
-
-.retailer-list{
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.retailer-list li{
-  border-top: 1px solid rgba(255,255,255,0.12);
-}
-
-.retailer-list li:first-child{
-  border-top: none;
-}
-
-.retailer-list a{
-  display: flex;
-  align-items: center;
-  gap: 1.1rem;
-  padding: 0.9rem 0;
-  text-decoration: none;
-  color: #f28c28;
-}
-
-.retailer-list img{
-  width: 70px;
-  height: auto;
-  opacity: 0.95;
-}
-
-.retailer-list span{
-  border-bottom: 1px solid rgba(242,140,40,0.35);
-}
-
-.retailer-list a:hover span{
-  border-bottom-color: #f28c28;
-}
-
-.small-note{
-  margin-top: 1.8rem;
-  font-size: 0.95rem;
-  opacity: 0.85;
-  text-align: center;
-}
+.retailers{margin-top:2.8rem;max-width:560px;margin-left:auto;margin-right:auto;text-align:left;font-family:'Inter',sans-serif;font-size:.98rem;opacity:.92}
+.retailers h2{font-family:'Libre Baskerville',serif;font-size:1.1rem;color:#fff;margin:0 0 1rem 0;text-align:center}
+.retailer-list{list-style:none;padding:0;margin:0}
+.retailer-list li{border-top:1px solid rgba(255,255,255,0.12)}
+.retailer-list li:first-child{border-top:none}
+.retailer-list a{display:flex;align-items:center;gap:1.1rem;padding:.95rem 0;text-decoration:none;color:#f28c28}
+.retailer-list img{width:70px;height:auto;display:block}
+.retailer-list span{border-bottom:1px solid rgba(242,140,40,0.35)}
+.retailer-list a:hover span{border-bottom-color:#f28c28}
+.small-note{margin-top:1.8rem;font-size:.95rem;opacity:.85;text-align:center}
 </style>
 </head>
 
@@ -177,24 +60,18 @@ h1{
 <h1>Acheter le livre</h1>
 
 <div class="buy-box">
-  <p>
-    Le roman est publié par <strong>L’Harmattan</strong> et peut être commandé
-    directement sur le site officiel de l’éditeur.
-  </p>
+  <p>Le roman est publié par <strong>L’Harmattan</strong> et peut être commandé directement sur le site officiel de l’éditeur.</p>
 
   <div class="publisher">
     <div class="publisher-logo">
-      <img src="images/accueil/logo-harmattan.png"
-           alt="Logo des Éditions L’Harmattan"
-           onerror="if(!this.dataset.try){this.dataset.try=1;this.src='/images/accueil/logo-harmattan.png';return;}if(this.dataset.try==1){this.dataset.try=2;this.src='images/accueil/Logo-harmattan.jpg';return;}if(this.dataset.try==2){this.dataset.try=3;this.src='/images/accueil/Logo-harmattan.jpg';return;}">
+      <img src="images/accueil/logo-harmattan.png" alt="Logo des Éditions L’Harmattan">
     </div>
     <div class="publisher-name">Éditions L’Harmattan</div>
   </div>
 
-  <a href="https://www.editions-harmattan.fr/catalogue/livre/le-testament-dazenor/81789"
-     target="_blank"
-     rel="noopener"
-     class="buy-link">
+  <a class="buy-link"
+     href="https://www.editions-harmattan.fr/catalogue/livre/le-testament-dazenor/81789"
+     target="_blank" rel="noopener">
      Acheter chez l’éditeur
   </a>
 
@@ -205,44 +82,36 @@ h1{
       <li>
         <a href="https://www.leslibraires.fr/livre/26250550-le-testament-d-azenor-une-epopee-du-vie-siecle-breton-alain-bertrand-l-harmattan"
            target="_blank" rel="noopener">
-          <img src="images/accueil/leslibraires.png" alt="Leslibraires.fr">
+          <img src="/azenor/images/accueil/leslibraires.svg?v=2" alt="Leslibraires.fr">
           <span>Leslibraires.fr</span>
         </a>
       </li>
-
       <li>
         <a href="https://www.decitre.fr/livres/le-testament-d-azenor-9782336593012.html"
            target="_blank" rel="noopener">
-          <img src="images/accueil/decitre.png" alt="Decitre">
+          <img src="/azenor/images/accueil/decitre.svg?v=2" alt="Decitre">
           <span>Decitre</span>
         </a>
       </li>
-
       <li>
         <a href="https://www.cultura.com/p-le-testament-d-azenor-une-epopee-du-vie-siecle-breton-9782336593012.html"
            target="_blank" rel="noopener">
-          <img src="images/accueil/cultura.png" alt="Cultura">
+          <img src="/azenor/images/accueil/cultura.svg?v=2" alt="Cultura">
           <span>Cultura</span>
         </a>
       </li>
-
       <li>
-        <a href="https://www.amazon.fr/testament-dAz%C3%A9nor-%C3%A9pop%C3%A9e-si%C3%A8cle-breton/dp/2336593017/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=28S5KE9JMKTB0&dib=eyJ2IjoiMSJ9.wcOud1bhG8QNd3YWVDZmUA.VRmGNyFgGgebmHIQdSI2mUXhozz7CILHbIMWzyvAEQY&dib_tag=se&keywords=LE+TESTAMENT+D%27az%C3%A9nor&qid=1769279881&sprefix=le+testament+d%27az%C3%A9nor%2Caps%2C251&sr=8-1"
+        <a href="https://www.amazon.fr/dp/2336593017"
            target="_blank" rel="noopener">
-          <img src="images/accueil
-          /amazon.png" alt="Amazon">
+          <img src="/azenor/images/accueil/amazon.svg?v=2" alt="Amazon">
           <span>Amazon</span>
         </a>
       </li>
     </ul>
 
-    <p class="small-note">
-      Le livre peut également être commandé dans toutes les librairies.
-    </p>
+    <p class="small-note">Le livre peut également être commandé dans toutes les librairies.</p>
   </div>
-
 </div>
 </main>
-
 </body>
 </html>
